# felend

./: .gitignore
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 380e4bff066b_add_oauth_temporary_tokens_table.py  49626bde8086_add_email_verification_table.py  69a70e6ba2fd_initial_migration.py  9ce0e3290f23_add_verification_type_to_email_.py  b1261121ac7e_add_categories_and_survey_categories_.py  c2c2407b044c_add_user_data_to_email_verifications.py  ce733df46d04_add_categories_and_survey_categories_.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  error_handlers.py  exceptions.py  google_config.py  middleware.py  security.py
backend/app/repositories/: base_repository.py  category_repository.py  email_verification_repository.py  google_account_repository.py  oauth_token_repository.py  survey_repository.py  survey_response_repository.py  user_repository.py
backend/app/services/: auth_service.py  balance_service.py  email_service.py  email_verification_service.py  survey_service.py  (+8 more)
backend/docs/: DATABASE_CONFIG.md  DEPLOYMENT.md  database_schema.md  email_verification.md  full_api_docs.md  google-auth-flow.md
backend/scripts/: seed_categories.py  seed_categories.sql
backend/tests/: conftest.py  test_auth_endpoints.py  test_email_verification.py  test_google_accounts.py  test_google_auth.py  test_password_reset.py  test_security.py  test_surveys.py  test_user_endpoints.py
(+115 files in other folders)
